# CheatRunner

./: CHANGELOG.md  CMakeLists.txt  README.md  build-cheatrunner.ps1
.github/: FUNDING.yml
src/: cr_activity.c  cr_activity.h  cr_addr_cache.c  cr_addr_cache.h  cr_api.c  cr_api.h  cr_api_cheats.c  cr_api_cheats.h  cr_api_config.c  cr_api_dashboard.c  cr_api_dashboard.h  cr_api_dev.c  cr_api_dev.h  cr_api_games.c  cr_api_games.h  cr_api_internal.h  cr_api_launch.c  cr_api_logs.c  cr_api_logs.h  cr_api_patches.c  cr_api_patches.h  cr_api_sources.c  cr_api_sources.h  cr_api_title_prefs.c  cr_appdb.c  cr_appdb.h  cr_browser.c  cr_browser.h  cr_cheat_formats.c  cr_cheat_formats.h  cr_cheats.c  cr_cheats.h  cr_config.c  cr_config.h  cr_conflict.c  cr_conflict.h  cr_dns.c  cr_dns.h  cr_fan.c  cr_fan.h  (+55 more)
